include/operators.h

ORTKI_API(ortki::OrtKITensorSeq *) ortki_LinearClassifier(ortki::OrtKITensor * X, int64_t* classlabels_ints, int classlabels_ints_size, const char** classlabels_strings, int classlabels_strings_size, float* coefficients, int coefficients_size, float* intercepts, int intercepts_size, int64_t multi_class, const char* post_transform);
ORTKI_API(ortki::OrtKITensor *) ortki_LinearRegressor(ortki::OrtKITensor * X, float* coefficients, int coefficients_size, float* intercepts, int intercepts_size, const char* post_transform, int64_t targets);
ORTKI_API(ortki::OrtKITensor *) ortki_Normalizer(ortki::OrtKITensor * X, const char* norm);
ORTKI_API(ortki::OrtKITensor *) ortki_OneHotEncoder(ortki::OrtKITensor * X, int64_t* cats_int64s, int cats_int64s_size, const char** cats_strings, int cats_strings_size, int64_t zeros);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_SVMClassifier(ortki::OrtKITensor * X, int64_t* classlabels_ints, int classlabels_ints_size, const char** classlabels_strings, int classlabels_strings_size, float* coefficients, int coefficients_size, float* kernel_params, int kernel_params_size, const char* kernel_type, const char* post_transform, float* prob_a, int prob_a_size, float* prob_b, int prob_b_size, float* rho, int rho_size, float* support_vectors, int support_vectors_size, int64_t* vectors_per_class, int vectors_per_class_size);
ORTKI_API(ortki::OrtKITensor *) ortki_SVMRegressor(ortki::OrtKITensor * X, float* coefficients, int coefficients_size, float* kernel_params, int kernel_params_size, const char* kernel_type, int64_t n_supports, int64_t one_class, const char* post_transform, float* rho, int rho_size, float* support_vectors, int support_vectors_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Scaler(ortki::OrtKITensor * X, float* offset, int offset_size, float* scale, int scale_size);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_TreeEnsembleClassifier(ortki::OrtKITensor * X, float* base_values, int base_values_size, int64_t* class_ids, int class_ids_size, int64_t* class_nodeids, int class_nodeids_size, int64_t* class_treeids, int class_treeids_size, float* class_weights, int class_weights_size, int64_t* classlabels_int64s, int classlabels_int64s_size, const char** classlabels_strings, int classlabels_strings_size, int64_t* nodes_falsenodeids, int nodes_falsenodeids_size, int64_t* nodes_featureids, int nodes_featureids_size, float* nodes_hitrates, int nodes_hitrates_size, int64_t* nodes_missing_value_tracks_true, int nodes_missing_value_tracks_true_size, const char** nodes_modes, int nodes_modes_size, int64_t* nodes_nodeids, int nodes_nodeids_size, int64_t* nodes_treeids, int nodes_treeids_size, int64_t* nodes_truenodeids, int nodes_truenodeids_size, float* nodes_values, int nodes_values_size, const char* post_transform);
ORTKI_API(ortki::OrtKITensor *) ortki_TreeEnsembleRegressor(ortki::OrtKITensor * X, const char* aggregate_function, float* base_values, int base_values_size, int64_t n_targets, int64_t* nodes_falsenodeids, int nodes_falsenodeids_size, int64_t* nodes_featureids, int nodes_featureids_size, float* nodes_hitrates, int nodes_hitrates_size, int64_t* nodes_missing_value_tracks_true, int nodes_missing_value_tracks_true_size, const char** nodes_modes, int nodes_modes_size, int64_t* nodes_nodeids, int nodes_nodeids_size, int64_t* nodes_treeids, int nodes_treeids_size, int64_t* nodes_truenodeids, int nodes_truenodeids_size, float* nodes_values, int nodes_values_size, const char* post_transform, int64_t* target_ids, int target_ids_size, int64_t* target_nodeids, int target_nodeids_size, int64_t* target_treeids, int target_treeids_size, float* target_weights, int target_weights_size);
ORTKI_API(ortki::OrtKITensor *) ortki_ZipMap(ortki::OrtKITensor * X, int64_t* classlabels_int64s, int classlabels_int64s_size, const char** classlabels_strings, int classlabels_strings_size);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Adagrad(ortki::OrtKITensor * R, ortki::OrtKITensor * T, ortki::OrtKITensor * inputs, float decay_factor, float epsilon, float norm_coefficient);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Adam(ortki::OrtKITensor * R, ortki::OrtKITensor * T, ortki::OrtKITensor * inputs, float alpha, float beta, float epsilon, float norm_coefficient, float norm_coefficient_post);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Gradient(ortki::OrtKITensor ** Inputs, int input_size, const char** xs, int xs_size, const char* y, const char** zs, int zs_size);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Momentum(ortki::OrtKITensor * R, ortki::OrtKITensor * T, ortki::OrtKITensor * inputs, float alpha, float beta, const char* mode, float norm_coefficient);