CSharp/OrtKISharp/Operators.cs


    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_LinearClassifier(Tensor X, long[] classlabels_ints, nuint classlabels_ints_size, string[] classlabels_strings, nuint classlabels_strings_size, float[] coefficients, nuint coefficients_size, float[] intercepts, nuint intercepts_size, long multi_class, string post_transform);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_LinearRegressor(Tensor X, float[] coefficients, nuint coefficients_size, float[] intercepts, nuint intercepts_size, string post_transform, long targets);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Normalizer(Tensor X, string norm);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_OneHotEncoder(Tensor X, long[] cats_int64s, nuint cats_int64s_size, string[] cats_strings, nuint cats_strings_size, long zeros);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_SVMClassifier(Tensor X, long[] classlabels_ints, nuint classlabels_ints_size, string[] classlabels_strings, nuint classlabels_strings_size, float[] coefficients, nuint coefficients_size, float[] kernel_params, nuint kernel_params_size, string kernel_type, string post_transform, float[] prob_a, nuint prob_a_size, float[] prob_b, nuint prob_b_size, float[] rho, nuint rho_size, float[] support_vectors, nuint support_vectors_size, long[] vectors_per_class, nuint vectors_per_class_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_SVMRegressor(Tensor X, float[] coefficients, nuint coefficients_size, float[] kernel_params, nuint kernel_params_size, string kernel_type, long n_supports, long one_class, string post_transform, float[] rho, nuint rho_size, float[] support_vectors, nuint support_vectors_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Scaler(Tensor X, float[] offset, nuint offset_size, float[] scale, nuint scale_size);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_TreeEnsembleClassifier(Tensor X, float[] base_values, nuint base_values_size, Tensor base_values_as_tensor, long[] class_ids, nuint class_ids_size, long[] class_nodeids, nuint class_nodeids_size, long[] class_treeids, nuint class_treeids_size, float[] class_weights, nuint class_weights_size, Tensor class_weights_as_tensor, long[] classlabels_int64s, nuint classlabels_int64s_size, string[] classlabels_strings, nuint classlabels_strings_size, long[] nodes_falsenodeids, nuint nodes_falsenodeids_size, long[] nodes_featureids, nuint nodes_featureids_size, float[] nodes_hitrates, nuint nodes_hitrates_size, Tensor nodes_hitrates_as_tensor, long[] nodes_missing_value_tracks_true, nuint nodes_missing_value_tracks_true_size, string[] nodes_modes, nuint nodes_modes_size, long[] nodes_nodeids, nuint nodes_nodeids_size, long[] nodes_treeids, nuint nodes_treeids_size, long[] nodes_truenodeids, nuint nodes_truenodeids_size, float[] nodes_values, nuint nodes_values_size, Tensor nodes_values_as_tensor, string post_transform);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_TreeEnsembleRegressor(Tensor X, string aggregate_function, float[] base_values, nuint base_values_size, Tensor base_values_as_tensor, long n_targets, long[] nodes_falsenodeids, nuint nodes_falsenodeids_size, long[] nodes_featureids, nuint nodes_featureids_size, float[] nodes_hitrates, nuint nodes_hitrates_size, Tensor nodes_hitrates_as_tensor, long[] nodes_missing_value_tracks_true, nuint nodes_missing_value_tracks_true_size, string[] nodes_modes, nuint nodes_modes_size, long[] nodes_nodeids, nuint nodes_nodeids_size, long[] nodes_treeids, nuint nodes_treeids_size, long[] nodes_truenodeids, nuint nodes_truenodeids_size, float[] nodes_values, nuint nodes_values_size, Tensor nodes_values_as_tensor, string post_transform, long[] target_ids, nuint target_ids_size, long[] target_nodeids, nuint target_nodeids_size, long[] target_treeids, nuint target_treeids_size, float[] target_weights, nuint target_weights_size, Tensor target_weights_as_tensor);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ZipMap(Tensor X, long[] classlabels_int64s, nuint classlabels_int64s_size, string[] classlabels_strings, nuint classlabels_strings_size);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_Adagrad(Tensor R, Tensor T, Tensor inputs, float decay_factor, float epsilon, float norm_coefficient);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_Adam(Tensor R, Tensor T, Tensor inputs, float alpha, float beta, float epsilon, float norm_coefficient, float norm_coefficient_post);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_Gradient(IntPtr[] Inputs, nuint input_size, string[] xs, nuint xs_size, string y, string[] zs, nuint zs_size);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_Momentum(Tensor R, Tensor T, Tensor inputs, float alpha, float beta, string mode, float norm_coefficient);

}